Fixed search issue, now escaping as json. Updated the css to put a small margin arround the body so it looks nicer when on mobile. Changed to use the default markdown renderer - kramdown

--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,10 @@ div.slides {
   background-color: white;
 }
 
+body {
+  padding: 8px;
+}
+
 @media screen {
   .site {
     border: solid 3px #6F4242;
